Added books data fetch from api and book class

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="container"></div>
   
-  <script src="script.js"></script>
+  <script src="script.js" type="module"></script>
+  <script src="book.js" type="module"></script>
 </body>
 </html>
