--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <a href="authorization.html">Przejdz do logowania</a>
   <div class="container"></div>
   
   <script src="script.js" type="module"></script>
