Added user verify js, element js, restricted page

--- a/authorization.html
+++ b/authorization.html
@@ -7,12 +7,12 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="index.html">Wróć</a><br/>
 
   <input id="login-input" type="text" name="Login"><br/>
   <input id="password-input" type="password" name="password"><br/>
   <button id="submit-form" name="submit-form-button">Potwierdź</button>
 
-  <script src="login.js"></script>
+  <script src="user.js" type="module"></script>
+  <script src="login.js" type="module"></script>
 </body>
 </html>
