--- a/index.html
+++ b/index.html
@@ -5,12 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <a href="authorization.html">Przejdz do logowania</a>
-  <div class="container"></div>
+  <div class="container">
+    <nav>
+      <div class="navbar">
+        <div class="navbar-header">
+          Nawigacja
+        </div>
+        <div class="navbar-items">
+          Użytkownik niezalogowany
+        </div>
+      </div>
+    </nav>
+
+    <div class="content">
+
+    </div>
+    <a href="restricted.html">Strona wyłącznie dla zalogowanych</a>
+  </div>
   
   <script src="script.js" type="module"></script>
+  <script src="verify.js" type="module"></script>
+  <script src="element.js" type="module"></script>
   <script src="book.js" type="module"></script>
 </body>
 </html>
