Removed verify cos tam added options for specific roles + logout button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         <div class="navbar-header">
           Nawigacja
         </div>
-        <div class="navbar-items">
+        <div class="navbar-item">
           Użytkownik niezalogowany
+        </div>
+        <div class="navbar-item">
+          <a id="Logout" href="#">Wyloguj</a>
         </div>
       </div>
     </nav>
@@ -27,7 +30,6 @@
   </div>
   
   <script src="script.js" type="module"></script>
-  <script src="verify.js" type="module"></script>
   <script src="element.js" type="module"></script>
   <script src="book.js" type="module"></script>
 </body>
