--- a/restricted.html
+++ b/restricted.html
@@ -13,18 +13,24 @@
       <div class="navbar-header">
         Nawigacja
       </div>
-      <div class="navbar-items">
+      <div class="navbar-item">
         Użytkownik niezalogowany
+      </div>
+      <div class="navbar-item">
+        <a id="Logout" href="#">Wyloguj</a>
       </div>
     </div>
   </nav>
   <div class="container">
     <div class="data">
-      
+
+    </div>
+    <div class="buttons">
+      <button class="a-role-button">Dla roli A</button>
+      <button class="b-role-button">Dla roli B</button>
     </div>
   </div>
 
-  <script src="verify.js" type="module"></script>
   <script src="element.js" type="module"></script>
   <script src="restricted.js" type="module"></script>
 </body>
