--- a/restricted.html
+++ b/restricted.html
@@ -17,7 +17,7 @@
         Użytkownik niezalogowany
       </div>
       <div class="navbar-item">
-        <a id="Logout" href="#">Wyloguj</a>
+        <a id="Logout" href="#">Zaloguj</a>
       </div>
     </div>
   </nav>
