--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           Użytkownik niezalogowany
         </div>
         <div class="navbar-item">
-          <a id="Logout" href="#">Wyloguj</a>
+          <a id="Logout" href="#">Zaloguj</a>
         </div>
       </div>
     </nav>
@@ -28,9 +28,9 @@
     </div>
     <a href="restricted.html">Strona wyłącznie dla zalogowanych</a>
   </div>
-  
-  <script src="script.js" type="module"></script>
+
   <script src="element.js" type="module"></script>
+  <script src="script.js" type="module"></script>
   <script src="book.js" type="module"></script>
 </body>
 </html>
