Little fixes + added download csv file from api and uploading csv

--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
     <div class="content">
 
     </div>
+    <input id='csv-file' type="file">
+    <button id="send-csv">Wyślij</button><br/>
+    <button id="download-csv">Pobierz plik CSV z książkami</button><br/>
     <a href="restricted.html">Strona wyłącznie dla zalogowanych</a>
+    
   </div>
-
+  <script src="csv-send.js"></script>
+  <script src="csv.js"></script>
   <script src="element.js" type="module"></script>
   <script src="script.js" type="module"></script>
   <script src="book.js" type="module"></script>
