--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     <div class="content">
 
     </div>
-    <input id='csv-file' type="file">
-    <button id="send-csv">Wyślij</button><br/>
+    <div class="form">
+      <input id='csv-file' type="file">
+      <button id="send-csv">Wyślij</button><br/>
+    </div>
     <button id="download-csv">Pobierz plik CSV z książkami</button><br/>
     <a href="restricted.html">Strona wyłącznie dla zalogowanych</a>
     
